--- a/src/app/components/subservicios-3/subservicios-3.component.html
+++ b/src/app/components/subservicios-3/subservicios-3.component.html
@@ -50,7 +50,7 @@
     </ol>
     <h2 class="titulo-3">Nuestros Servicios</h2>
     <div class="containersub-3">
-        <img  class="img3" src="/servicios2/nuestrosservicios.jpg" alt="">
+        <img  class="imgservi" src="/servicios2/nuestrosservicios.jpg" alt="">
         <div class="container-3">
             <div class="container-servicios">
             <div class="serviciosprincipales">
