--- a/src/app/components/subservicios-4/subservicios-4.component.html
+++ b/src/app/components/subservicios-4/subservicios-4.component.html
@@ -1,100 +1,116 @@
 <app-nav-responsive></app-nav-responsive>
 <app-navegacion></app-navegacion>
 <header>
-<h1>SERVICIO TENDIDO DE REDES PARA HABILITACIONES URBANAS</h1>
+    <h1>SERVICIO TENDIDO DE REDES PARA HABILITACIONES URBANAS</h1>
 </header>
 <main>
-    <h2 class="titulo-2">En Preciso, realizamos instalaciones nuevas y solucionamos problemas del servicio de tendido de redes.</h2>
+    <h2 class="titulo-2">En Preciso, realizamos instalaciones nuevas y solucionamos problemas del servicio de tendido de
+        redes.</h2>
     <div class="container-sub1">
-    <ol class="custom-icons">
-        <li class="subtitulo">
-            <img src="bitmap.svg" alt="">
-            Diseño y planificación</li>
-        <p>Realizamos un estudio exhaustivo del terreno y las necesidades del cliente para diseñar redes eléctricas optimizadas. Solicitud de la factibilidad del suministro y punto de diseño con el concesionario eléctrico
-            Elaboración del expediente técnico de la red primaria para su presentación y aprobación por el concesionario eléctrico            
-        </p>
-        <li class="subtitulo">
-            <img src="bitmap.svg" alt="">
-            Suministro de equipos</li>
-        <p>Suministro de equipos y materiales de la Red eléctrica primaría desde el punto de diseño del concesionario hasta el predio (acometida eléctrica)
-            <br>Suministro de equipos y materiales de la Red eléctrica secundaria interna, incluye subestación/es en media tensión
-            <br>Suministro de equipos y materiales para la red secundaria en baja tensión, hasta el murete porta medidor de cada lote/casa
-            <br>Suministro de conductores, postes y luminarias de alumbrado público
-            <br>Suministro de conductores, tomacorrientes y sockets de cada casa            
-        </p>
-        <li class="subtitulo">
-            <img src="bitmap.svg" alt="">
-            Instalación de cables y equipos</li>
-        <p>Instalación de los equipos y materiales de la Red eléctrica primaría desde el punto de diseño del concesionario hasta el predio (acometida eléctrica)
-            <br>Instalación de los equipos y materiales de la Red eléctrica secundaria interna, incluye subestación/es en media tensión
-            <br>Instalación de los equipos y materiales para la red secundaria en baja tensión, hasta el murete porta medidor de cada lote/casa
-            <br>Instalación de conductores, postes y luminarias de alumbrado público
-            <br>Suministro de conductores, tomacorrientes y sockets de cada casa            
-        </p>
-        <li class="subtitulo">
-            <img src="bitmap.svg" alt="">
-            Pruebas y puesta en marcha</li>
-        <p>Realizamos pruebas de funcionamiento en conjunto con la concesionaria y aseguramos la puesta en marcha del sistema de utilización en media tensión.
-        </p>
-        <li class="subtitulo">
-            <img src="bitmap.svg" alt="">
-            Mantenimiento y monitoreo</li>
-        <p>Ofrecemos servicios de mantenimiento y monitoreo continuo para asegurar la estabilidad y confiabilidad de la red eléctrica.  
-        </p>
-    </ol>
-    <img class="imgsubservicio" src="/servicios/4.jpg" alt=""></div>
+        <ol class="custom-icons">
+            <li class="subtitulo">
+                <img src="bitmap.svg" alt="">
+                Diseño y planificación
+            </li>
+            <p>Diseñamos redes eléctricas eficientes, gestionando factibilidad y aprobación con el concesionario
+                eléctrico.</p>
+            <li class="subtitulo">
+                <img src="bitmap.svg" alt="">
+                Suministro de equipos
+            </li>
+            <p>Suministramos equipos y materiales para redes eléctricas primarias y secundarias, incluyendo
+                subestaciones, alumbrado público y conexión eléctrica individual en cada lote/casa.</p>
+            <li class="subtitulo">
+                <img src="bitmap.svg" alt="">
+                Instalación de cables y equipos
+            </li>
+            <p>
+                ChatGPT
+                Realizamos la instalación de redes eléctricas primarias y secundarias, incluyendo subestaciones,
+                alumbrado público y conexión eléctrica individual en cada vivienda. </p>
+            <li class="subtitulo">
+                <img src="bitmap.svg" alt="">
+                Pruebas y puesta en marcha
+            </li>
+            <p>Realizamos pruebas de funcionamiento en conjunto con la concesionaria y aseguramos la puesta en marcha
+                del sistema de utilización en media tensión.
+            </p>
+            <li class="subtitulo">
+                <img src="bitmap.svg" alt="">
+                Mantenimiento y monitoreo
+            </li>
+            <p>Ofrecemos servicios de mantenimiento y monitoreo continuo para asegurar la estabilidad y confiabilidad de
+                la red eléctrica.
+            </p>
+        </ol>
+        <img class="imgsubservicio" src="/servicios/4.jpg" alt="">
+    </div>
     <h2 class="titulo-5">¿Como lo hacemos?</h2>
     <ol class="containersub-2">
         <div class="container-2">
-        <img src="servicios2/subservicios1.jpg" alt="">
-        <p class="imgnum">1</p>
-        <li>Comparte con nosotros tus necesidades específicas. ¡Nos gustaría escucharte!</li>
+            <img src="servicios2/subservicios1.jpg" alt="">
+            <p class="imgnum">1</p>
+            <li>Comparte con nosotros tus necesidades específicas. ¡Nos gustaría escucharte!</li>
         </div>
         <div class="container-2">
-        <img src="servicios2/subservicios2.jpg" alt="">
-        <p class="imgnum">2</p>
-        <li>
-            Agenda una visita técnica para evaluar tu situación y proporcionarte un presupuesto detallado.</li>
+            <img src="servicios2/subservicios2.jpg" alt="">
+            <p class="imgnum">2</p>
+            <li>
+                Agenda una visita técnica para evaluar tu situación y proporcionarte un presupuesto detallado.</li>
         </div>
         <div class="container-2">
-        <img src="servicios2/subservicios3.jpg" alt="">
-        <p class="imgnum">3</p>
-        <li>Nuestro equipo se encargará de diseñar e implementar la solución más adecuada para tu negocio.</li>
+            <img src="servicios2/subservicios3.jpg" alt="">
+            <p class="imgnum">3</p>
+            <li>Nuestro equipo se encargará de diseñar e implementar la solución más adecuada para tu negocio.</li>
         </div>
     </ol>
     <h2 class="titulo-3">Nuestros Servicios</h2>
     <div class="containersub-3">
-        <img  class="img3" src="/servicios2/nuestrosservicios.jpg" alt="">
+        <img class="imgservi" src="/servicios2/nuestrosservicios.jpg" alt="">
         <div class="container-3">
             <div class="container-servicios">
-            <div class="serviciosprincipales">
-            <li>
-                <img src="/icons/ic1.svg" alt="">
-                Sistema de Utilización de Media y Baja Tensión</li>
-            <p>Diseñamos y ejecutamos sistemas eléctricos seguros y eficientes para aplicaciones industriales, comerciales y residenciales.</p>
+                <div class="serviciosprincipales">
+                    <li>
+                        <img src="/icons/ic1.svg" alt="">
+                        Sistema de Utilización de Media y Baja Tensión
+                    </li>
+                    <p>Diseñamos y ejecutamos sistemas eléctricos seguros y eficientes para aplicaciones industriales,
+                        comerciales y residenciales.</p>
+                </div>
+                <div class="serviciosprincipales">
+                    <li>
+                        <img src="/icons/ic2.svg" alt="">
+                        Servicios Eléctricos de Baja Tensión
+                    </li>
+                    <p>Ofrecemos una amplia gama de servicios eléctricos para instalaciones de baja tensión, asegurando
+                        la eficiencia y confiabilidad de su sistema eléctrico.</p>
+                </div>
             </div>
-            <div class="serviciosprincipales">
-            <li>
-                <img src="/icons/ic2.svg" alt="">
-                Servicios Eléctricos de Baja Tensión</li>
-            <p>Ofrecemos una amplia gama de servicios eléctricos para instalaciones de baja tensión, asegurando la eficiencia y confiabilidad de su sistema eléctrico.</p></div></div>
             <div class="container-servicios">
-            <div class="serviciosprincipales">
-            <li>
-                <img src="/icons/ic3.svg" alt="">
-                Mantenimiento de Subestaciones Eléctricas</li>
-            <p>Brindamos servicios integrales de mantenimiento para subestaciones eléctricas, garantizando su óptimo funcionamiento y seguridad.</p></div>
-            <div class="serviciosprincipales">
-            <li>
-                <img src="/icons/ic4.svg" alt="">
-                Tendido de Redes</li>
-            <p>Planificamos, insta lamos y mantenemos redes eléctricas para una distribución segura y eficiente de la energía eléctrica.</p></div></div>
+                <div class="serviciosprincipales">
+                    <li>
+                        <img src="/icons/ic3.svg" alt="">
+                        Mantenimiento de Subestaciones Eléctricas
+                    </li>
+                    <p>Brindamos servicios integrales de mantenimiento para subestaciones eléctricas, garantizando su
+                        óptimo funcionamiento y seguridad.</p>
+                </div>
+                <div class="serviciosprincipales">
+                    <li>
+                        <img src="/icons/ic4.svg" alt="">
+                        Tendido de Redes
+                    </li>
+                    <p>Planificamos, insta lamos y mantenemos redes eléctricas para una distribución segura y eficiente
+                        de la energía eléctrica.</p>
+                </div>
+            </div>
         </div>
     </div>
     <div class="container-4">
-        <h2 class="titulo-4">¿Te gustaría que te brindemos un diagnóstico completo y detallado del servicio de tendido de redes que necesitas? ¡No dudes en contactarnos!
+        <h2 class="titulo-4">¿Te gustaría que te brindemos un diagnóstico completo y detallado del servicio de tendido
+            de redes que necesitas? ¡No dudes en contactarnos!
         </h2>
-        <button  (click)="irAExterno()">¡No dudes en contactarnos!</button>
+        <button (click)="irAExterno()">¡No dudes en contactarnos!</button>
     </div>
 </main>
 <app-footer></app-footer>
