--- a/src/app/components/subservicios-6/subservicios-6.component.html
+++ b/src/app/components/subservicios-6/subservicios-6.component.html
@@ -1,124 +1,95 @@
 <app-nav-responsive></app-nav-responsive>
 <app-navegacion></app-navegacion>
 <header>
-<h1>SERVICIO POZO A TIERRA</h1>
+    <h1>SERVICIO POZO A TIERRA</h1>
 </header>
 <main>
     <h2 class="titulo-2">En Preciso, realizamos pozos a tierra.</h2>
-    <div class="container-sub1">
-    <ol class="custom-icons">
-        <li class="subtitulo">
-            <img src="bitmap.svg" alt="">
-            Pozos a Tierra</li>
-        <p>En Preciso, te ofrecemos todo el detalle del diseño técnico del pozo a tierra (tipo de varilla, características, profundidad, camas que se han realizado de tierras, dimensiones de las varillas con el conector A/B, etc). Además, los certificados que emitimos son válidos para INDECI, auditorías y para obtener la licencia de funcionamiento.
-        </p>
-        <li class="subtitulo">
-            <img src="bitmap.svg" alt="">
-            Construcción e Instalación</li>
-        <li class="subtitulo">
-            <img src="bitmap.svg" alt="">
-            Mantenimiento a Pozo a Tierra</li>
-        <li class="subtitulo">
-            <img src="bitmap.svg" alt="">
-            Tipos de Pozo a tierra</li>
-        <p>
-            <li class="subtitulo">
-                <img src="bitmap.svg" alt="">
-                Pozos a tierra con electrodos verticales:</li>
-                <span>Utilizados en áreas con espacio limitado o suelos con baja resistividad. Consisten en varillas de cobre o acero revestido de cobre que se clavan verticalmente en el suelo.</span>
-            <li class="subtitulo">
-                <img src="bitmap.svg" alt="">
-                Pozos a tierra con placas horizontales:</li>
-                <span>Utilizados en suelos con alta resistividad. Consisten en placas metálicas enterradas horizontalmente a una profundidad específica.</span>
-            <li class="subtitulo">
-                <img src="bitmap.svg" alt="">
-                Pozos a tierra con geles o bentonita:</li>
-                <span>Empleados para mejorar la conductividad del suelo en áreas con alta resistividad. Involucran el uso de materiales que retienen humedad alrededor del electrodo.</span>
-            <li class="subtitulo">
-                <img src="bitmap.svg" alt="">
-                Tipos de Pozo a tierra</li>
-        </p>
-        <li class="subtitulo">
-            <img src="bitmap.svg" alt="">
-            Mantenimiento y soporte técnico</li>
-        <p>Ofrecemos servicios de mantenimiento preventivo y correctivo para garantizar la continuidad y eficiencia del sistema.
-        </p>
-        <li class="subtitulo">
-            <img src="bitmap.svg" alt="">
-            Sistemas eléctricos residenciales:</li>
-        <p>Para proteger los electrodomésticos y personas de fallas eléctricas.
-        </p>
-        <h2>Aplicaciones</h2>
-        <li class="subtitulo">
-            <img src="bitmap.svg" alt="">
-            Infraestructuras comerciales e industriales:</li>
-            <p>Infraestructuras comerciales e industriales:</p>
-        <li class="subtitulo">
-            <img src="bitmap.svg" alt="">
-            Telecomunicaciones:</li>
-            <p>Para asegurar la correcta operación de equipos de comunicación y evitar interferencias.</p>
-        <li class="subtitulo">
-            <img src="bitmap.svg" alt="">
-            ¡Estamos comprometidos con la seguridad y la eficiencia de tus instalaciones eléctricas!</li>
-        <li class="subtitulo">
-            <img src="bitmap.svg" alt="">
-            Mantenimiento y soporte técnico</li>
-        <p>Ofrecemos servicios de mantenimiento preventivo y correctivo para garantizar la continuidad y eficiencia del sistema.
-        </p>
-    </ol>
-    <img class="imgsubservicio" src="/servicios/6.jpg" alt=""></div>
-    <h2 class="titulo-5">¿Como lo hacemos?</h2>
+    <h2 class="titulo-5">SERVICIOS</h2>
     <ol class="containersub-2">
         <div class="container-2">
-        <img src="servicios2/subservicios1.jpg" alt="">
-        <p class="imgnum">1</p>
-        <li>Comparte con nosotros tus necesidades específicas. ¡Nos gustaría escucharte!</li>
+            <img src="/icons/ic1.svg" alt="">
+            <li>Construcción e Instalación</li>
         </div>
         <div class="container-2">
-        <img src="servicios2/subservicios2.jpg" alt="">
-        <p class="imgnum">2</p>
-        <li>
-            Agenda una visita técnica para evaluar tu situación y proporcionarte un presupuesto detallado.</li>
+            <img src="/icons/ic2.svg" alt="">
+            <li>Mantenimiento a Pozo a Tierra</li>
         </div>
         <div class="container-2">
-        <img src="servicios2/subservicios3.jpg" alt="">
-        <p class="imgnum">3</p>
-        <li>Nuestro equipo se encargará de diseñar e implementar la solución más adecuada para tu negocio.</li>
+            <img src="/icons/ic3.svg" alt="">
+            <li>Tipos de Pozo a tierra</li>
         </div>
     </ol>
-    <h2 class="titulo-3">Nuestros Servicios</h2>
-    <div class="containersub-3">
-        <img  class="img3" src="/servicios2/nuestrosservicios.jpg" alt="">
+    <div class="container-sub1">
+        <ol class="custom-icons">
+                 
+                <li class="subtitulo">
+                    <img src="bitmap.svg" alt="">
+                    Pozos a tierra con electrodos verticales:
+                </li>
+                <span>Utilizados en áreas con espacio limitado o suelos con baja resistividad. Consisten en varillas de
+                    cobre o acero revestido de cobre que se clavan verticalmente en el suelo.</span>
+                <li class="subtitulo">
+                    <img src="bitmap.svg" alt="">
+                    Pozos a tierra con placas horizontales:
+                </li>
+                <span>Utilizados en suelos con alta resistividad. Consisten en placas metálicas enterradas
+                    horizontalmente a una profundidad específica.</span>
+                <li class="subtitulo">
+                    <img src="bitmap.svg" alt="">
+                    Pozos a tierra con geles o bentonita:
+                </li>
+                <span>Empleados para mejorar la conductividad del suelo en áreas con alta resistividad. Involucran el
+                    uso de materiales que retienen humedad alrededor del electrodo.</span>
+               
+          
+        </ol>
+        <img class="imgsubservicio" src="/servicios/6.jpg" alt="">
+    </div>
+    <h2 class="titulo-3">Aplicaciones</h2>
+   <div class="containersub-3">
+        <img class="img3" src="/servicios2/nuestrosservicios.jpg" alt="">
         <div class="container-3">
+            <li class="subtitulo">
+                <img src="bitmap.svg" alt="">
+                Infraestructuras comerciales e industriales:
+            </li>
+            <li class="subtitulo">
+                <img src="bitmap.svg" alt="">
+                Telecomunicaciones:
+            </li>
+            <li class="subtitulo">
+                <img src="bitmap.svg" alt="">
+                Mantenimiento y soporte técnico
+            </li>
+            <p>Ofrecemos servicios de mantenimiento preventivo y correctivo para garantizar la continuidad y eficiencia
+                del sistema.
+            </p>
             <div class="container-servicios">
-            <div class="serviciosprincipales">
-            <li>
-                <img src="/icons/ic1.svg" alt="">
-                Sistema de Utilización de Media y Baja Tensión</li>
-            <p>Diseñamos y ejecutamos sistemas eléctricos seguros y eficientes para aplicaciones industriales, comerciales y residenciales.</p>
+                <div class="serviciosprincipales">
+                    <li>
+                        <img src="/icons/ic3.svg" alt="">
+                        Mantenimiento de Subestaciones Eléctricas
+                    </li>
+                    <p>Brindamos servicios integrales de mantenimiento para subestaciones eléctricas, garantizando su
+                        óptimo funcionamiento y seguridad.</p>
+                </div>
+                <div class="serviciosprincipales">
+                    <li>
+                        <img src="/icons/ic4.svg" alt="">
+                        Tendido de Redes
+                    </li>
+                    <p>Planificamos, insta lamos y mantenemos redes eléctricas para una distribución segura y eficiente
+                        de la energía eléctrica.</p>
+                </div>
             </div>
-            <div class="serviciosprincipales">
-            <li>
-                <img src="/icons/ic2.svg" alt="">
-                Servicios Eléctricos de Baja Tensión</li>
-            <p>Ofrecemos una amplia gama de servicios eléctricos para instalaciones de baja tensión, asegurando la eficiencia y confiabilidad de su sistema eléctrico.</p></div></div>
-            <div class="container-servicios">
-            <div class="serviciosprincipales">
-            <li>
-                <img src="/icons/ic3.svg" alt="">
-                Mantenimiento de Subestaciones Eléctricas</li>
-            <p>Brindamos servicios integrales de mantenimiento para subestaciones eléctricas, garantizando su óptimo funcionamiento y seguridad.</p></div>
-            <div class="serviciosprincipales">
-            <li>
-                <img src="/icons/ic4.svg" alt="">
-                Tendido de Redes</li>
-            <p>Planificamos, insta lamos y mantenemos redes eléctricas para una distribución segura y eficiente de la energía eléctrica.</p></div></div>
         </div>
     </div>
     <div class="container-4">
-        <h2 class="titulo-4">¿Te gustaría que te brindemos un diagnóstico completo y detallado del servicio de pozo a tierra que necesitas? ¡No dudes en contactarnos!
+        <h2 class="titulo-4">¿Te gustaría que te brindemos un diagnóstico completo y detallado del servicio de pozo a
+            tierra que necesitas? ¡No dudes en contactarnos!
         </h2>
-        <button  (click)="irAExterno()">¡No dudes en contactarnos!</button>
+        <button (click)="irAExterno()">¡No dudes en contactarnos!</button>
     </div>
 </main>
 <app-footer></app-footer>
