--- a/src/app/components/subservicios-2/subservicios-2.component.html
+++ b/src/app/components/subservicios-2/subservicios-2.component.html
@@ -5,6 +5,7 @@
 </header>
 <main>
     <h2 class="titulo-2">En Preciso, realizamos instalaciones nuevas y solucionamos problemas de mantenimiento de subestaciones eléctricas.    </h2>
+    <h2 class="titulo-3">SERVICIO MANTENIMIENTO DE SUBESTACIONES ELÉCTRICAS</h2>
     <div class="container-sub1">
     <ol class="custom-icons">
         <li class="subtitulo">
@@ -43,7 +44,7 @@
     </ol>
     <h2 class="titulo-3">Nuestros Servicios</h2>
     <div class="containersub-3">
-        <img  class="img3" src="/servicios2/nuestrosservicios.jpg" alt="">
+        <img  class="imgservi" src="/servicios2/nuestrosservicios.jpg" alt="">
         <div class="container-3">
             <div class="container-servicios">
             <div class="serviciosprincipales">
