--- a/src/app/components/subservicios-5/subservicios-5.component.html
+++ b/src/app/components/subservicios-5/subservicios-5.component.html
@@ -1,92 +1,109 @@
 <app-nav-responsive></app-nav-responsive>
 <app-navegacion></app-navegacion>
 <header>
-<h1>SERVICIO MANTENIMIENTO DE TABLEROS ELÉCTRICOS</h1>
+    <h1>SERVICIO MANTENIMIENTO DE TABLEROS ELÉCTRICOS</h1>
 </header>
 <main>
     <h2 class="titulo-2">En Preciso, realizamos mantenimiento de tableros eléctricos.</h2>
+    <h2 class="titulo-3">SERVICIO MANTENIMIENTO DE TABLEROS ELÉCTRICOS </h2>
     <div class="container-sub1">
-    <ol class="custom-icons">
-        <li class="subtitulo">
-            <img src="bitmap.svg" alt="">
-            Mantenimiento De Tableros Eléctricos</li>
-        <p>Realizamos el mantenimiento rutinario de los tableros eléctricos como la forma ideal de garantizar el buen funcionamiento de las instalaciones eléctricas. Estos dispositivos son fundamentales para el normal funcionamiento de los fluidos eléctricos en plantas industriales, residenciales, de viviendas y comerciales.
-        </p>
-        <li class="subtitulo">
-            <img src="bitmap.svg" alt="">
-            Mantenimiento Preventivo de Tableros Eléctricos</li>
-        <p>En nuestro servicio de mantenimiento preventivo de tableros eléctricos, nos aseguramos de mantener un óptimo funcionamiento de las instalaciones eléctricas.
-        </p>
-        <li class="subtitulo">
-            <img src="bitmap.svg" alt="">
-            Mantenimiento Correctivo de Tableros Eléctricos</li>
-        <p>En nuestro servicio de mantenimiento correctivo de tableros eléctricos, nos comprometemos a resolver cualquier problema que pueda surgir en las instalaciones eléctricas. 
-        </p>
-        <li class="subtitulo">
-            <img src="bitmap.svg" alt="">
-            Inspección De Tableros Eléctricos</li>
-        <p>En nuestro servicio de inspección de tableros eléctricos, llevamos a cabo una evaluación exhaustiva para garantizar su correcto funcionamiento. A continuación, describimos los pasos y entregables incluidos en este servicio:
-            <li> <img src="bitmap.svg" alt="">Visita técnica realizada por nuestros técnicos
-        </li>
-        <li> <img src="bitmap.svg" alt="">Identificación del tipo de tablero a intervenir: generales, distribución o
-            transferencia.
+        <ol class="custom-icons">
+            <li class="subtitulo">
+                <img src="bitmap.svg" alt="">
+                Mantenimiento De Tableros Eléctricos
             </li>
-        <li> <img src="bitmap.svg" alt="">Elaboración de informe técnico del mantenimiento de tableros eléctricos.
-        </li></p>
-    </ol>
-    <img class="imgsubservicio" src="/servicios/5.jpg" alt=""></div>
+            <p>Realizamos mantenimiento preventivo de tableros eléctricos para asegurar el funcionamiento óptimo en
+                diversos entornos industriales, residenciales y comerciales. </p>
+            <li class="subtitulo">
+                <img src="bitmap.svg" alt="">
+                Mantenimiento Preventivo de Tableros Eléctricos
+            </li>
+            <p>En nuestro servicio de mantenimiento preventivo de tableros eléctricos, nos aseguramos de mantener un
+                óptimo funcionamiento de las instalaciones eléctricas.
+            </p>
+            <li class="subtitulo">
+                <img src="bitmap.svg" alt="">
+                Mantenimiento Correctivo de Tableros Eléctricos
+            </li>
+            <p>En nuestro servicio de mantenimiento correctivo de tableros eléctricos, nos comprometemos a resolver
+                cualquier problema que pueda surgir en las instalaciones eléctricas.
+            </p>
+            <li class="subtitulo">
+                <img src="bitmap.svg" alt="">
+                Inspección De Tableros Eléctricos
+            </li>
+            <p>Realizamos inspecciones detalladas de tableros eléctricos para garantizar su funcionamiento correcto.
+                Incluimos visita técnica, identificación del tipo de tablero y elaboración de informe técnico detallado.
+            </p>
+        </ol>
+        <img class="imgsubservicio" src="/servicios/5.jpg" alt="">
+    </div>
     <h2 class="titulo-5">¿Como lo hacemos?</h2>
     <ol class="containersub-2">
         <div class="container-2">
-        <img src="servicios2/subservicios1.jpg" alt="">
-        <p class="imgnum">1</p>
-        <li>Comparte con nosotros tus necesidades específicas. ¡Nos gustaría escucharte!</li>
+            <img src="servicios2/subservicios1.jpg" alt="">
+            <p class="imgnum">1</p>
+            <li>Comparte con nosotros tus necesidades específicas. ¡Nos gustaría escucharte!</li>
         </div>
         <div class="container-2">
-        <img src="servicios2/subservicios2.jpg" alt="">
-        <p class="imgnum">2</p>
-        <li>
-            Agenda una visita técnica para evaluar tu situación y proporcionarte un presupuesto detallado.</li>
+            <img src="servicios2/subservicios2.jpg" alt="">
+            <p class="imgnum">2</p>
+            <li>
+                Agenda una visita técnica para evaluar tu situación y proporcionarte un presupuesto detallado.</li>
         </div>
         <div class="container-2">
-        <img src="servicios2/subservicios3.jpg" alt="">
-        <p class="imgnum">3</p>
-        <li>Nuestro equipo se encargará de diseñar e implementar la solución más adecuada para tu negocio.</li>
+            <img src="servicios2/subservicios3.jpg" alt="">
+            <p class="imgnum">3</p>
+            <li>Nuestro equipo se encargará de diseñar e implementar la solución más adecuada para tu negocio.</li>
         </div>
     </ol>
     <h2 class="titulo-3">Nuestros Servicios</h2>
     <div class="containersub-3">
-        <img  class="img3" src="/servicios2/nuestrosservicios.jpg" alt="">
+        <img class="imgservi" src="/servicios2/nuestrosservicios.jpg" alt="">
         <div class="container-3">
             <div class="container-servicios">
-            <div class="serviciosprincipales">
-            <li>
-                <img src="/icons/ic1.svg" alt="">
-                Sistema de Utilización de Media y Baja Tensión</li>
-            <p>Diseñamos y ejecutamos sistemas eléctricos seguros y eficientes para aplicaciones industriales, comerciales y residenciales.</p>
+                <div class="serviciosprincipales">
+                    <li>
+                        <img src="/icons/ic1.svg" alt="">
+                        Sistema de Utilización de Media y Baja Tensión
+                    </li>
+                    <p>Diseñamos y ejecutamos sistemas eléctricos seguros y eficientes para aplicaciones industriales,
+                        comerciales y residenciales.</p>
+                </div>
+                <div class="serviciosprincipales">
+                    <li>
+                        <img src="/icons/ic2.svg" alt="">
+                        Servicios Eléctricos de Baja Tensión
+                    </li>
+                    <p>Ofrecemos una amplia gama de servicios eléctricos para instalaciones de baja tensión, asegurando
+                        la eficiencia y confiabilidad de su sistema eléctrico.</p>
+                </div>
             </div>
-            <div class="serviciosprincipales">
-            <li>
-                <img src="/icons/ic2.svg" alt="">
-                Servicios Eléctricos de Baja Tensión</li>
-            <p>Ofrecemos una amplia gama de servicios eléctricos para instalaciones de baja tensión, asegurando la eficiencia y confiabilidad de su sistema eléctrico.</p></div></div>
             <div class="container-servicios">
-            <div class="serviciosprincipales">
-            <li>
-                <img src="/icons/ic3.svg" alt="">
-                Mantenimiento de Subestaciones Eléctricas</li>
-            <p>Brindamos servicios integrales de mantenimiento para subestaciones eléctricas, garantizando su óptimo funcionamiento y seguridad.</p></div>
-            <div class="serviciosprincipales">
-            <li>
-                <img src="/icons/ic4.svg" alt="">
-                Tendido de Redes</li>
-            <p>Planificamos, insta lamos y mantenemos redes eléctricas para una distribución segura y eficiente de la energía eléctrica.</p></div></div>
+                <div class="serviciosprincipales">
+                    <li>
+                        <img src="/icons/ic3.svg" alt="">
+                        Mantenimiento de Subestaciones Eléctricas
+                    </li>
+                    <p>Brindamos servicios integrales de mantenimiento para subestaciones eléctricas, garantizando su
+                        óptimo funcionamiento y seguridad.</p>
+                </div>
+                <div class="serviciosprincipales">
+                    <li>
+                        <img src="/icons/ic4.svg" alt="">
+                        Tendido de Redes
+                    </li>
+                    <p>Planificamos, insta lamos y mantenemos redes eléctricas para una distribución segura y eficiente
+                        de la energía eléctrica.</p>
+                </div>
+            </div>
         </div>
     </div>
     <div class="container-4">
-        <h2 class="titulo-4">¿Te gustaría que te brindemos un diagnóstico completo y detallado del servicio Mantenimiento De Tableros Eléctricos ? ¡No dudes en contactarnos!
+        <h2 class="titulo-4">¿Te gustaría que te brindemos un diagnóstico completo y detallado del servicio
+            Mantenimiento De Tableros Eléctricos ? ¡No dudes en contactarnos!
         </h2>
-        <button  (click)="irAExterno()">¡No dudes en contactarnos!</button>
+        <button (click)="irAExterno()">¡No dudes en contactarnos!</button>
     </div>
 </main>
 <app-footer></app-footer>
