--- a/src/app/components/subservicios-8/subservicios-8.component.css
+++ b/src/app/components/subservicios-8/subservicios-8.component.css
@@ -14,7 +14,7 @@ main{
     box-sizing: border-box;
 }
 header{
-    background-image: url("/servicios/7.jpg");
+    background-image: url("/servicios/2.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -37,19 +37,19 @@ header h1{
 }
 ol{
     list-style: none;
-    margin: 0;
+    padding-left: 50px;
 }
 li{
-    margin-top: 20px;
+    padding-top: 20px;
     display: flex;
     align-items: center;
     font-size: 25px;
 }
 li img{
     box-sizing: border-box;
-    width: 25px;
-    height: 25px;
-    margin: 10px;
+    width: 50px;
+    height: 50px;
+    padding: 10px;
 }
 .icon{
     object-fit: contain;
@@ -60,16 +60,17 @@ li img{
 p{
     padding: 0 50px;
     font-size: 20px;
-    color: #000;
+    color: #18437f;
     text-shadow: 1px 1px 1px #a7a7a7;
+    text-align: justify;
 }
 .titulo-2{
     text-align: center;
-    margin: 50px;
+    padding: 50px;
 }
 .titulo-3{
     text-align: center;
-    padding: 50px;
+    padding-top: 30px;
     background-color: #AFD0FE;
 }
 .titulo-4{
@@ -78,7 +79,7 @@ p{
 }
 .titulo-5{
     text-align: center;
-    padding: 50px;
+    padding-top: 30px;
     background-color: #fff;
 }
 .container-sub1{
@@ -87,11 +88,12 @@ p{
     height: auto;
     padding: 30px 0;
     align-items: center;
+    padding-right: 100px;
 }
 .imgsubservicio{
-    width: 50%;
-    height: auto;
-    border-radius: 10px;
+    width: 35%;
+    height: 550px;
+    border-radius: 20px;
     object-fit: cover;
 }
 
@@ -107,7 +109,7 @@ h2{
     display: flex;
     background-color: #fff;
     text-align: center;
-    padding: 100px 0;
+    padding-right: 40px;
 }
 
 .container-2 img{
@@ -117,13 +119,21 @@ h2{
 }
 .container-2{
     flex: 1;
+    padding-left: 30px;
+    padding-right: 40px;
 }
 .container-2 li{
     color: #18437f;
-    font-weight: bold;
+    font-weight: bold;    
+    text-align: justify;
+    font-size: 18px;
+    font-family: Arial;
+
 }
 .imgnum{
     font-size: 70px;
+    text-align: center;
+    color: #18437f;
 }
 
 .containersub-3{
@@ -131,20 +141,26 @@ h2{
     padding: 30px 0;
     align-items: center;
     background-color: #AFD0FE;
+    padding-left: 70px;
 }
-.containersub-3 .img3{
-    width: 50%;
-    height:100%;
-    border-radius: 10px;
+.imgservi{
+    width: 30%;
+    height:400px;
     box-sizing: border-box;
-    object-fit: contain;
+    border-radius: 20px;
+    object-fit: cover;
+    padding-left: 0px;
 }
 .container-servicios{
-    display: flex;
+    display: flex;    
+    padding-right: 20px;
+    color: #18437f;
 }
 .serviciosprincipales{
     width: 50%;
     box-sizing: border-box;
+    padding-right: 20px;
+   
 }
 .serviciosprincipales li{
     color: #18437f;
@@ -152,14 +168,16 @@ h2{
 .serviciosprincipales img{
     width: 50px;
     height: 50px;
-    margin: 10px;
+    padding: 10px;
 }
 .container-4{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(223, 223, 223);
-    padding: 100px 0;
+    background-color: rgb(223, 223, 223);  
+    font-size: 18px;
+    text-align: justify;
+    padding-bottom: 30px;
 }
 .container-4 button{
     background-color: #18437f;
@@ -177,31 +195,49 @@ h2{
 @media (max-width: 800px) {
     .container-sub1{
         flex-direction: column;
+        padding-right: 15%;
+        padding-left: 15%;
+    }
+    .subtitulo img{
+        width: 20%;
+        height: auto;
     }
     .containersub-2{
         flex-direction: column;
+        padding-right: 5%;
+    }
+    .container-2{
+        padding-bottom: 15%;
     }
     .containersub-3{
-        flex-direction: column;
+        flex-direction: column;        
+        padding-right: 10%;
     }
     .container-3{
         flex-direction: column;
-        width: 100%;
+        width: auto;
     }
     .container-servicios{
         flex-direction: column;
-        width: 100%;
+        width:100%;
     }
     .serviciosprincipales{
         width: 100%;
+
     }
     .custom-icons p{
-        padding: 0 10%;
+        padding: 0 0%;
     }
     .custom-icons{
         padding: 0;
     }
     .imgsubservicio{
-        margin: 20px 0;
+        margin: 0px 0;
+        height: auto;
+        width: 90%;
+    }
+    .imgservi{
+        height: auto;
+        width: 90%;
     }
 }
